--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,13 +17,13 @@
             </div>
             <div class="details">
                 <p>
-                    pedagog
+                    <span class="ikona">person</span> pedagog
                 </p>
                 <p>
-                    leona.jencova@pslib.cz
+                    <span class="ikona">mail</span> leona.jencova@pslib.cz
                 </p>
                 <p>
-                    420 485 100 113
+                    <span class="ikona">mobile</span> 420 485 100 113
                 </p>
             </div>
         </section>
@@ -35,13 +36,32 @@
             </div>
             <div class="details">
                 <p>
-                    pedagog
+                    <span class="ikona">person</span> pedagog
                 </p>
                 <p>
-                    vojtech.brodsky@pslib.cz
+                    <span class="ikona">mail</span> vojtech.brodsky@pslib.cz
                 </p>
                 <p>
-                    420 485 100 113/44
+                    <span class="ikona">mobile</span> 420 485 100 113/44
+                </p>
+            </div>
+        </section>
+        <section class="person-card">
+            <div class="header">
+                <img src="./imgs/Ba.jpg" class="img-responsive">
+                <p>
+                    Zuzana bernátová (Bá)
+                </p>
+            </div>
+            <div class="details">
+                <p>
+                    <span class="ikona">person</span> pedagog
+                </p>
+                <p>
+                    <span class="ikona">mail</span> zuzana.bernatova@pslib.cz
+                </p>
+                <p>
+                    <span class="ikona">mobile</span> 420 485 100 113/44
                 </p>
             </div>
         </section>
