--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
         <section class="person-card">
             <div class="header">
-                <img src="./imgs\Br.jpg" class="img-responsive">
+                <div class="img-header">
+                    <img src="./imgs\Br.jpg" class="img-responsive">
+                </div>
+ 
                 <p>
                     Vojtěch Brodský (Br)
                 </p>
@@ -29,7 +32,10 @@
         </section>
         <section class="person-card">
             <div class="header">
-                <img src="./imgs\Jc.jpg" class="img-responsive">
+                <div class="img-header">
+                    <img src="./imgs\Jc.jpg" class="img-responsive">
+                </div>
+                
                 <p>
                     Leona Jenčová (Jc)
                 </p>
@@ -48,7 +54,10 @@
         </section>
         <section class="person-card">
             <div class="header">
-                <img src="./imgs/Ba.jpg" class="img-responsive">
+                <div class="img-header">
+                    <img src="./imgs/Ba.jpg" class="img-responsive">
+                </div>
+             
                 <p>
                     Zuzana bernátová (Bá)
                 </p>
