--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <span class="ikona">person</span> pedagog
                 </p>
                 <p>
-                    <span class="ikona">mail</span> leona.jencova@pslib.cz
+                    <span class="ikona">mail</span> vojtech.brodsky@pslib.cz
                 </p>
                 <p>
                     <span class="ikona">mobile</span> 420 485 100 113
@@ -45,10 +45,10 @@
                     <span class="ikona">person</span> pedagog
                 </p>
                 <p>
-                    <span class="ikona">mail</span> vojtech.brodsky@pslib.cz
+                    <span class="ikona">mail</span> leona.jencova@pslib.cz
                 </p>
                 <p>
-                    <span class="ikona">mobile</span> 420 485 100 113/44
+                    <span class="ikona ikona--red">mobile</span> 420 485 100 113/44
                 </p>
             </div>
         </section>
